去除一些jdk17不加绒的api 比如sun.net/sum.misc中的 jdk17移除了Nashorn引擎，手动添加支持 暂时去除Netty中SelfSignedCertificate的使用，会报错，估计也是使用旧版本sun包的原因 升级Netty的版本，不升级会报错（Could not initialize class io.netty.util.internal.PlatformDependent0）