@@ -1,8 +1,8 @@
 package com.snowcattle.game.common.util;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
+import javax.crypto.*;
+import javax.crypto.spec.PBEKeySpec;
+import javax.crypto.spec.PBEParameterSpec;
 import java.io.IOException;
 import java.security.InvalidAlgorithmParameterException;
 import java.security.InvalidKeyException;
@@ -10,15 +10,7 @@ import java.security.NoSuchAlgorithmException;
 import java.security.spec.AlgorithmParameterSpec;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.KeySpec;
-
-import javax.crypto.BadPaddingException;
-import javax.crypto.Cipher;
-import javax.crypto.IllegalBlockSizeException;
-import javax.crypto.NoSuchPaddingException;
-import javax.crypto.SecretKey;
-import javax.crypto.SecretKeyFactory;
-import javax.crypto.spec.PBEKeySpec;
-import javax.crypto.spec.PBEParameterSpec;
+import java.util.Base64;
 
 public class DesEncrypter {
 	Cipher ecipher;
@@ -65,7 +57,7 @@ public class DesEncrypter {
 			byte[] enc = ecipher.doFinal(utf8);
 
 			// Encode bytes to base64 to get a string
-			return new BASE64Encoder().encode(enc);
+			return Base64.getEncoder().encodeToString(enc);
 		} catch (BadPaddingException | IOException | IllegalBlockSizeException e) {
 		}
         return null;
@@ -74,7 +66,7 @@ public class DesEncrypter {
 	public String decrypt(String str) {
 		try {
 			// Decode base64 to get bytes
-			byte[] dec = new BASE64Decoder().decodeBuffer(str);
+			byte[] dec = Base64.getDecoder().decode(str);
 
 			// Decrypt
 			byte[] utf8 = dcipher.doFinal(dec);
